--- a/src/_includes/scss/_typography.scss
+++ b/src/_includes/scss/_typography.scss
@@ -219,7 +219,7 @@ del {
 
     &--full {
       clear: both;
-      width: 100%;
+      max-width: 100%;
     }
 
     &__caption {
